Enabling toggling knuckle coupler state

--- a/ZCouplers.csproj
+++ b/ZCouplers.csproj
@@ -20,6 +20,7 @@
     <Reference Include="DV.Utils"/>
     <Reference Include="Stateless"/>
     <Reference Include="UnityEngine.AssetBundleModule"/>
+    <Reference Include="UnityEngine.AudioModule"/>
     <Reference Include="UnityEngine.CoreModule"/>
     <Reference Include="UnityEngine.PhysicsModule"/>
     <Reference Include="UnityModManager"/>
