Lock/unlock knuckles when coupling with the remote

--- a/ZCouplers.csproj
+++ b/ZCouplers.csproj
@@ -16,6 +16,7 @@
     <Reference Include="0Harmony"/>
     <Reference Include="Assembly-CSharp"/>
     <Reference Include="Assembly-CSharp-firstpass"/>
+    <Reference Include="DVCustomCarLoader"/>
     <Reference Include="DV.BrakeSystem"/>
     <Reference Include="DV.Utils"/>
     <Reference Include="Stateless"/>
