Persist coupler lock state in save

--- a/ZCouplers.csproj
+++ b/ZCouplers.csproj
@@ -19,6 +19,7 @@
     <Reference Include="DVCustomCarLoader"/>
     <Reference Include="DV.BrakeSystem"/>
     <Reference Include="DV.Utils"/>
+    <Reference Include="Newtonsoft.Json"/>
     <Reference Include="Stateless"/>
     <Reference Include="UnityEngine.AssetBundleModule"/>
     <Reference Include="UnityEngine.AudioModule"/>
