Hide buffers when using knuckles

--- a/ZCouplers.csproj
+++ b/ZCouplers.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <Reference Include="0Harmony"/>
     <Reference Include="Assembly-CSharp"/>
+    <Reference Include="DV.ThingTypes"/>
     <Reference Include="Assembly-CSharp-firstpass"/>
     <!-- <Reference Include="DVCustomCarLoader"/> -->
     <Reference Include="DV.BrakeSystem"/>
