--- a/ZCouplers.csproj
+++ b/ZCouplers.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <RootNamespace>DvMod.ZCouplers</RootNamespace>
@@ -13,8 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="UnityModManager" Version="0.27.0"/>
-    <PackageReference Include="UnityEngine.Modules" Version="2019.4.40" IncludeAssets="compile"/>
+    <Reference Include="UnityModManager"/>
+    <Reference Include="UnityEngine.AssetBundleModule"/>
+    <Reference Include="UnityEngine.AudioModule"/>
+    <Reference Include="UnityEngine.CoreModule"/>
+    <Reference Include="UnityEngine.PhysicsModule"/>
   </ItemGroup>
 
   <ItemGroup>
