--- a/ZCouplers.csproj
+++ b/ZCouplers.csproj
@@ -4,7 +4,7 @@
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <RootNamespace>DvMod.ZCouplers</RootNamespace>
-    <InformationalVersion>1.2.2</InformationalVersion>
+    <InformationalVersion>0.1.0</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,5 +37,11 @@
 
   <ItemGroup>
     <EmbeddedResource Include="ZCouplers.assetbundle"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="References\**" />
+    <EmbeddedResource Remove="References\**" />
+    <None Remove="References\**" />
   </ItemGroup>
 </Project>
