refactor: update asset bundle source and error logging
- Update asset bundle loading to reference "zcouplers" and improve error logging for failed asset bundle stream.
- Embed asset bundle from external Unity Assets directory instead of local assetbundle file.

Signed-off-by: Fuggschen <fuggschen@krk-gaming.de>

--- a/ZCouplers/ZCouplers.csproj
+++ b/ZCouplers/ZCouplers.csproj
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="ZCouplers.assetbundle"/>
+    <EmbeddedResource Include="..\ZCouplers.Unity\Assets\AssetBundles\zcouplers"/>
   </ItemGroup>
 
   <ItemGroup>
